[gd_scene load_steps=18 format=3 uid="uid://b0cj7suiadfgl"]

[ext_resource type="Script" uid="uid://dvnhfvnlunccp" path="res://menus/DiedMenu/died_menu.gd" id="1_ejmq8"]
[ext_resource type="Texture2D" uid="uid://fjwi8na8e0on" path="res://assets/sprites/menus/YouDiedScreen.png" id="1_lpfjf"]
[ext_resource type="AudioStream" uid="uid://b6eybw1lp0exj" path="res://assets/sfx/ui/menu-navigate.wav" id="1_qmipa"]
[ext_resource type="AudioStream" uid="uid://ct1rtntxcwq5u" path="res://assets/sfx/ui/click.wav" id="2_0c483"]
[ext_resource type="FontFile" uid="uid://b1urfel7egtmu" path="res://assets/fonts/VT323-Regular.ttf" id="2_af7uj"]
[ext_resource type="AudioStream" uid="uid://bjrxyytgwirof" path="res://assets/music/after-youve-gone/after-youve-gone-theme.ogg" id="6_b1qbk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c2tww"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0wfmv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oobp3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q5u5c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u4gg7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pcwjm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e10yk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kt6wx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2on0a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7y4r3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aq3hr"]

[node name="DiedMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ejmq8")

[node name="Sound" type="Node" parent="."]

[node name="NavigateSFXPlayer" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("1_qmipa")
bus = &"SFX"

[node name="SelectSFXPlayer" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("2_0c483")
bus = &"SFX"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lpfjf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -135.0
offset_top = -285.0
offset_right = 135.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.623529, 0.176471, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.858824, 0.254902, 0, 1)
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.894118, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_af7uj")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_c2tww")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0wfmv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_oobp3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_q5u5c")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_u4gg7")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pcwjm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_e10yk")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_kt6wx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2on0a")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7y4r3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_aq3hr")
text = "Restart"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.623529, 0.176471, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.858824, 0.254902, 0, 1)
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.894118, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_af7uj")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_c2tww")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0wfmv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_oobp3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_q5u5c")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_u4gg7")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pcwjm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_e10yk")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_kt6wx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2on0a")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7y4r3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_aq3hr")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.623529, 0.176471, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.858824, 0.254902, 0, 1)
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.894118, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("2_af7uj")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_c2tww")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_0wfmv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_oobp3")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_q5u5c")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_u4gg7")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pcwjm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_e10yk")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_kt6wx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2on0a")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7y4r3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_aq3hr")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_b1qbk")
volume_db = -10.0
autoplay = true
bus = &"Music"
parameters/looping = true
